--- a/lesson10/css/weather-api.css
+++ b/lesson10/css/weather-api.css
@@ -13,6 +13,9 @@ h1, h2{
     border-radius: 10px;
     padding: 10px;
 }
+img{
+    background-color: burlywood;
+}
 figcaption{
     font-style: oblique;
     font-weight: bold;
